# pygta-workspace-template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff-notebooks.toml  .ruff.toml  AGENTS.md  CLAUDE.md  CODING_GUIDELINES.md  CONTRIBUTING.md  LICENSE  README.md  bootstrap.bat  bootstrap.py  pyproject.toml  repos.toml
.agents/skills/pygta-project/: SKILL.md
.agents/skills/pygta-project/references/: PROJECT_ANATOMY.md
.agents/skills/pygta-validate/: SKILL.md
.agents/skills/review-skill/: SKILL.md
pygta-local-extras/: AGENTS.md  CLAUDE.md  pyproject.toml
pygta-local-extras/src/: __init__.py
pygta-local-extras/src/io/: __init__.py
quickstart/: README.md  quickstart.ipynb
scripts/: new_project.py
